Added workaround for QFileDialog and initial directory (QTBUG-35779).